User Management returned to Person Details
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -65,12 +65,10 @@ Busybee\People\PersonBundle\Entity\Person:
             nullable: true
         lastModified:
             type: datetime
-            nullable: true
-            name: last_modified
+            column: last_modified
         createdOn:
             type: datetime
-            nullable: true
-            name: created_on
+            column: created_on
         vehicleRegistration:
             type: string
             length: '25'
