Staff Management Buttons loaded and tested
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/PersonBundle/Resources/config/services.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/services.yml
@@ -62,7 +62,7 @@ parameters:
             label: person.staff.tab
             include: '@@BusybeeStaff/Person/staff.html.twig'
             message: staffMessage
-            translation: BusybeeStaffBundle
+            translation: BusybeePersonBundle
 #        immigration:
 #            label: person.tab.immigration
 #            include: BusybeeStudentBundle:Person:immigration.html.twig
