--- a/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
+++ b/src/Busybee/People/PersonBundle/Resources/config/doctrine/Person.orm.yml
@@ -25,7 +25,7 @@ Busybee\People\PersonBundle\Entity\Person:
             type: string
             length: '32'
             nullable: true
-        title:
+        honorific:
             type: string
             length: '5'
             nullable: true
