--- a/src/Busybee/People/AddressBundle/Resources/config/services.yml
+++ b/src/Busybee/People/AddressBundle/Resources/config/services.yml
@@ -2,7 +2,7 @@ services:
     busybee_people_address.model.address_manager:
         class: Busybee\People\AddressBundle\Model\AddressManager
         arguments:
-            - '@translator'
+            - '@busybee_core_system.model.flash_bag_manager'
             - '@busybee_core_system.setting.setting_manager'
             - '@busybee_people_address.repository.address_repository'
     busybee_people_address.repository.address_repository:
@@ -12,3 +12,10 @@ services:
             - 'getRepository'
         arguments:
             - "BusybeeAddressBundle:Address"
+    busybee_people_address.form.address_type:
+        class: Busybee\People\AddressBundle\Form\AddressType
+        arguments:
+            - '@busybee_core_system.setting.setting_manager'
+            - '@doctrine.orm.default_entity_manager'
+        tags:
+            - { name: form.type }
