--- a/src/Busybee/People/LocalityBundle/Resources/config/services.yml
+++ b/src/Busybee/People/LocalityBundle/Resources/config/services.yml
@@ -1,4 +1,13 @@
 services:
-#    busybee_locality.example:
-#        class: Busybee\People\LocalityBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    busybee_people_locality.repository.locality_repository:
+        class: Busybee\People\LocalityBundle\Repository\LocalityRepository
+        factory:
+            - "@doctrine"
+            - 'getRepository'
+        arguments:
+            - "BusybeeLocalityBundle:Locality"
+    busybee_people_locality.model.locality_manager:
+        class: Busybee\People\LocalityBundle\Model\LocalityManager
+        arguments:
+            - '@doctrine.orm.default_entity_manager'
+
