Composer Update.  Address, Locality and Phone Validation
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/AddressBundle/Resources/config/Settings/Settings_0_0_01.yml
+++ b/src/Busybee/People/AddressBundle/Resources/config/Settings/Settings_0_0_01.yml
@@ -1,6 +1,6 @@
-person.version:
-    type: system
+address.version:
     value: 0.0.01
-    displayName: 'Version: Person Bundle'
+    type: system
+    displayName: 'Version: Address Bundle'
     description: System Setting ONLY
     role: ROLE_SYSTEM_ADMIN
