--- a/src/Busybee/People/StaffBundle/Resources/config/validation/Staff.yml
+++ b/src/Busybee/People/StaffBundle/Resources/config/validation/Staff.yml
@@ -7,5 +7,5 @@ Busybee\People\StaffBundle\Entity\Staff:
         jobTitle:
             - NotBlank: ~
         house:
-            - Busybee\Core\TemplateBundle\Validator\SettingChoice:
+            - \Busybee\Core\TemplateBundle\Validator\SettingChoice:
                 name: 'house.list'
