--- a/src/Busybee/InstituteBundle/Resources/config/validation/DepartmentStaff.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/validation/DepartmentStaff.yml
@@ -2,5 +2,5 @@ Busybee\InstituteBundle\Entity\DepartmentStaff:
     properties:
         staffType:
             - NotBlank: ~
-            - Busybee\Core\TemplateBundle\Validator\SettingChoice:
+            - \Busybee\Core\TemplateBundle\Validator\SettingChoice:
                 name: department.staff.type.list
