Added Locality Validator and Bundle Version Information
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/SystemBundle/Resources/Defaults/Australia.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/Defaults/Australia.yml
@@ -129,3 +129,12 @@ settings:
         'Year 2': Y2
         'Year 1': Y1
         'Kinder': Y0
+    locality.validation:
+        name: ~
+        territory:
+            NotBlank: ~
+            NotEqualTo:
+                value: '@@'
+                message: territory.not.specified
+        postCode: ~
+        country: ~
