--- a/src/Busybee/People/PhoneBundle/Resources/config/Settings/Settings_0_0_01.yml
+++ b/src/Busybee/People/PhoneBundle/Resources/config/Settings/Settings_0_0_01.yml
@@ -1,6 +1,6 @@
-Person.version:
+Phone.version:
     type: system
     value: 0.0.01
-    displayName: 'Version: Person Bundle'
+    displayName: 'Version: Phone Bundle'
     description: System Setting ONLY
     role: ROLE_SYSTEM_ADMIN
