Import Merge Field Page
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/AddressBundle/Resources/config/doctrine/Address.orm.yml
+++ b/src/Busybee/People/AddressBundle/Resources/config/doctrine/Address.orm.yml
@@ -21,15 +21,19 @@ Busybee\People\AddressBundle\Entity\Address:
         buildingType:
             type: string 
             length: '10'
+            nullable: true
         buildingNumber:
             type: string
             length: '10'
+            nullable: true
         streetNumber:
             type: string
             length: '15'
+            nullable: true
         propertyName:
             type: string
             length: '50'
+            nullable: true
         streetName:
             type: string
             length: '70'
