--- a/src/Busybee/Management/GradeBundle/Resources/config/routing.yml
+++ b/src/Busybee/Management/GradeBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-busybee_grade_homepage:
-    path:     /
-    defaults: { _controller: BusybeeGradeBundle:Default:index }
+delete_student_grade:
+    path:     /{id}/delete/
+    defaults: { _controller: BusybeeGradeBundle:Grade:deleteStudentGrade, id: null }
