--- a/src/Busybee/Management/GradeBundle/Resources/config/services.yml
+++ b/src/Busybee/Management/GradeBundle/Resources/config/services.yml
@@ -15,3 +15,11 @@ services:
         class: Busybee\Management\GradeBundle\Events\StudentSubscriber
         tags:
             - { name: doctrine.event_subscriber }
+    busybee_management_grade.validator.constraints.grades_validator:
+        class: Busybee\Management\GradeBundle\Validator\Constraints\GradesValidator
+        tags:
+            - { name: validator.constraint_validator, alias: student_grades_validator }
+    busybee_management_grade.model.grade_manager:
+        class: Busybee\Management\GradeBundle\Model\GradeManager
+        arguments:
+            - '@doctrine.orm.default_entity_manager'
